--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,6 @@ on:
   release:
     types: [published]
 
-env:
-  RUBY_VERSION: '2.7.0'
-
 jobs:
   staging:
     name: 'Deploy: Staging'
@@ -17,19 +14,15 @@ jobs:
 
     if: github.event_name == 'push'
 
-    container:
-      image: ruby:2.7.0
-
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install dpl gem
-        run: |
-          gem install dpl --no-document --version "~> 1.10"
-
       - name: Deploy
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_APP_NAME: gmmcal-dev
         run: |
-          dpl --provider=heroku --app=gmmcal-dev --api-key=${{ secrets.HEROKU_API_KEY }}
+          git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
 
   production:
     name: 'Deploy: Production'
@@ -43,10 +36,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install dpl gem
-        run: |
-          gem install dpl --no-document --version "~> 1.10"
-
       - name: Deploy
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_APP_NAME: gmmcal
         run: |
-          dpl --provider=heroku --app=gmmcal --api-key=${{ secrets.HEROKU_API_KEY }}
+          git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:master
