Do not use shallow clone

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+           fetch-depth: 0
 
       - name: Deploy
         env:
@@ -32,6 +34,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+           fetch-depth: 0
 
       - name: Deploy
         env:
