Remove Vue.js and make a fullstack rails application

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,6 +34,7 @@ Metrics/BlockLength:
   Exclude:
     - 'lib/tasks/*'
     - 'spec/**/*'
+    - 'config/routes.rb'
 
 Layout/LineLength:
   Exclude:
