--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "keywords": [
     "ruby",
     "rails",
-    "vuejs2",
     "jest",
     "rspec",
     "ruby-on-rails",
@@ -54,7 +53,6 @@
     "@fortawesome/free-brands-svg-icons": "*",
     "@fortawesome/free-regular-svg-icons": "*",
     "@fortawesome/free-solid-svg-icons": "*",
-    "@fortawesome/vue-fontawesome": "*",
     "@fullhuman/postcss-purgecss": "*",
     "@rails/webpacker": "*",
     "bootstrap": "*",
@@ -67,29 +65,21 @@
     "start-server-and-test": "*",
     "tailwindcss": "*",
     "turbolinks": "*",
-    "vue": "*",
-    "vue-loader": "*",
-    "vue-template-compiler": "*",
-    "vue-turbolinks": "*",
     "yarn": "*"
   },
   "devDependencies": {
     "@babel/core": "*",
-    "@vue/cli-plugin-unit-jest": "*",
-    "@vue/cli-service": "*",
-    "@vue/test-utils": "^1.0.0-beta.30",
     "babel-eslint": "*",
     "babel-jest": "*",
     "cypress": "*",
     "eslint": "*",
     "jest": "*",
     "jest-canvas-mock": "*",
-    "jest-serializer-vue": "*",
     "webpack-dev-server": "*"
   },
   "scripts": {
-    "test": "vue-cli-service test:unit --watch",
-    "test:once": "vue-cli-service test:unit",
+    "test": "jest --watch",
+    "test:once": "jest",
     "cypress:dev": "start-test server:start 3000 cypress:open",
     "server:start": "bundle exec rails server -p 3000",
     "cypress:run": "cypress run",
