--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -62,3 +62,24 @@ Style/MixinUsage:
 Layout/SpaceInsideArrayLiteralBrackets:
   Exclude:
     - 'config/**/*'
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
+Style/ExponentialNotation:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
