--- a/package.json
+++ b/package.json
@@ -36,17 +36,16 @@
     "cypress",
     "end-to-end-testing",
     "end-to-end",
-    "travis-ci",
-    "ebert",
+    "github-actions",
     "codeclimate",
     "hakiri",
     "heroku",
     "ci-cd"
   ],
   "engines": {
-    "node": "^12.0.0",
-    "npm": "^6.7.0",
-    "yarn": "^1.15.2"
+    "node": "^14.5.0",
+    "npm": "^6.14.5",
+    "yarn": "^1.22.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "*",
