--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,6 +29,25 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       # languages
       - name: Install APT dependencies
         run: |
@@ -43,6 +62,7 @@ jobs:
       # dependencies
       - name: Run bundle install
         run: |
+          bundle config path vendor/bundle
           bundle config set without test production
           bundle install --jobs 4 --retry 3 --deployment
 
@@ -91,6 +111,25 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install APT dependencies
         run: |
           curl -sL https://deb.nodesource.com/setup_14.x | bash -
@@ -104,6 +143,7 @@ jobs:
       # dependencies
       - name: Run bundle install
         run: |
+          bundle config path vendor/bundle
           bundle config set without test production
           bundle install --jobs 4 --retry 3 --deployment
 
