--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -30,6 +30,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
+
       # languages
       - name: Install APT dependencies
         run: |
@@ -41,6 +48,7 @@ jobs:
       # dependencies
       - name: Run bundle install
         run: |
+          bundle config path vendor/bundle
           bundle config set without development production
           bundle install --jobs 4 --retry 3 --deployment
 
@@ -73,6 +81,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Install APT dependencies
         run: |
