--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ require:
 AllCops:
   TargetRubyVersion: 2.5
   DisplayCopNames: true
+  NewCops: enable
   Exclude:
     - 'bin/**/*'
     - 'db/schema.rb'
