--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -98,7 +98,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Install ESLint
-        run: yarn add eslint babel-eslint --dev
+        run: yarn add eslint @babel/eslint-parser --dev
 
       - name: Run ESLint
         run: yarn eslint --config=.eslintrc.js app/javascript/packs/**/**.js
