--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ci-cd"
   ],
   "engines": {
-    "node": "^15.8.0",
+    "node": "^14.15.5",
     "npm": "^7.5.4",
     "yarn": "^1.22.0"
   },
@@ -65,7 +65,7 @@
     "@babel/core": "*",
     "babel-eslint": "*",
     "babel-jest": "*",
-    "cypress": "6.4.0",
+    "cypress": "*",
     "eslint": "*",
     "jest": "*",
     "jest-canvas-mock": "*",
