--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,9 +7,11 @@ version: 2
 updates:
   - package-ecosystem: "bundler"
     directory: "/"
+    open-pull-requests-limit: 50
     schedule:
       interval: "weekly"
   - package-ecosystem: "npm"
     directory: "/"
+    open-pull-requests-limit: 50
     schedule:
       interval: "weekly"
