--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,17 +14,19 @@ jobs:
 
     if: github.event_name == 'push'
 
+    container:
+      image: ruby:3.0.0
+
     steps:
-      - uses: actions/checkout@v2
-        with:
-           fetch-depth: 0
+      - uses: actions/checkout@v1
+
+      - name: Install dpl gem
+        run: |
+          gem install dpl --no-document --version "~> 1.10"
 
       - name: Deploy
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_APP_NAME: gmmcal-dev
         run: |
-          git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git origin/master:master
+          dpl --provider=heroku --app=gmmcal --api-key=${{ secrets.HEROKU_API_KEY }}
 
   production:
     name: 'Deploy: Production'
