--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/gmmcal/gmmcal.com.br/blob/master/LICENSE"
+      "url": "https://github.com/gmmcal/gmmcal.com.br/blob/main/LICENSE"
     }
   ],
   "contributors": [
