Add assignees to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,8 @@ updates:
       interval: "daily"
       time: "08:00"
       timezone: "Europe/Amsterdam"
+    assignees:
+      - "gmmcal"
   - package-ecosystem: "npm"
     directory: "/"
     open-pull-requests-limit: 50
@@ -19,3 +21,5 @@ updates:
       interval: "daily"
       time: "08:00"
       timezone: "Europe/Amsterdam"
+    assignees:
+      - "gmmcal"
