Add myself as reviewer for dependabot pull requests

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,8 @@ updates:
       timezone: "Europe/Amsterdam"
     assignees:
       - "gmmcal"
+    reviewers:
+      - "gmmcal"
   - package-ecosystem: "npm"
     directory: "/"
     open-pull-requests-limit: 50
@@ -22,4 +24,6 @@ updates:
       time: "08:00"
       timezone: "Europe/Amsterdam"
     assignees:
+      - "gmmcal"
+    reviewers:
       - "gmmcal"
