--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "@fortawesome/free-regular-svg-icons": "*",
     "@fortawesome/free-solid-svg-icons": "*",
     "@rails/webpacker": "*",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "*",
     "bootstrap": "*",
     "core-js": "*",
-    "postcss": "^8.4.8",
+    "postcss": "*",
     "rails-ujs": "*",
     "sortablejs": "*",
-    "tailwindcss": "<3.0.0",
+    "tailwindcss": "*",
     "turbolinks": "*",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
