Drop webpack in favor of jsbundling and cssbundling

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -6,6 +6,9 @@ plugin_directories: ['.scss-linters']
 exclude:
   - 'app/assets/stylesheets/admin/mdb/**'
   - 'app/javascript/stylesheets/components/skill.scss'
+  - 'app/assets/stylesheets/cv/_functions.scss'
+  - 'app/assets/stylesheets/cv/application.sass.scss'
+  - 'app/assets/stylesheets/frontend/components/skill.scss'
 
 # List of gem names to load custom linters from (make sure they are already
 # installed)
