--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -149,4 +149,4 @@ jobs:
         run: yarn install
 
       - name: Run ESLint
-        run: yarn eslint --config=.eslintrc.js app/javascript/packs/**/**.js
+        run: yarn eslint --config=.eslintrc.js app/javascript/**/**.js
