--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ yarn-debug.log*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
