--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,11 @@
 databases:
   - name: gustavocunha
     databaseName: gustavocunha
-    user: gustavocunha
+    plan: starter
+    ipAllowList: []
+    region: frankfurt
+  - name: gustavocunha-staging
+    databaseName: gustavocunha-staging
     plan: free
     ipAllowList: []
     region: frankfurt
@@ -10,10 +14,10 @@ services:
   - type: web
     name: gustavocunha
     env: ruby
-    buildCommand: "bundle install; bundle exec rake assets:precompile; bundle exec rake assets:clean; bundle exec rake db:migrate db:seed:all db:cache:clear;"
-    startCommand: "bundle exec puma -t 5:5 -p ${PORT:-3000} -e ${RACK_ENV:-development}"
-    autoDeploy: true
-    pullRequestPreviewsEnabled: true
+    buildCommand: "bundle install; bundle exec rake assets:precompile; bundle exec rake assets:clean; bundle exec rake db:migrate db:cache:clear;"
+    startCommand: "bundle exec puma -t 5:5 -p ${PORT:-3000} -e ${RACK_ENV:-production}"
+    autoDeploy: false
+    pullRequestPreviewsEnabled: false
     plan: free
     region: frankfurt
     envVars:
@@ -27,6 +31,21 @@ services:
           name: gustavocunha
           property: connectionString
       - fromGroup: production
+  - type: web
+    name: gustavocunha-staging
+    env: ruby
+    buildCommand: "bundle install; bundle exec rake assets:precompile; bundle exec rake assets:clean; bundle exec rake db:migrate db:seed:all db:cache:clear;"
+    startCommand: "bundle exec puma -t 5:5 -p ${PORT:-3000} -e ${RACK_ENV:-production}"
+    autoDeploy: true
+    pullRequestPreviewsEnabled: true
+    plan: free
+    region: frankfurt
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: gustavocunha-staging
+          property: connectionString
+      - fromGroup: staging
   - type: redis
     name: gustavocunha
     ipAllowList: []
