Replace turbolinks with hotwire and turbo

--- a/package.json
+++ b/package.json
@@ -51,13 +51,12 @@
     "@fortawesome/free-brands-svg-icons": "*",
     "@fortawesome/free-regular-svg-icons": "*",
     "@fortawesome/free-solid-svg-icons": "*",
+    "@hotwired/turbo-rails": "*",
     "bootstrap": "4",
     "esbuild": "*",
-    "rails-ujs": "*",
     "sass": "*",
     "sortablejs": "*",
-    "tailwindcss": "*",
-    "turbolinks": "*"
+    "tailwindcss": "*"
   },
   "devDependencies": {
     "cypress": "*",
