--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,9 @@ services:
     pullRequestPreviewsEnabled: false
     plan: free
     region: frankfurt
+    domains:
+      - gustavocunha.dev
+      - www.gustavocunha.dev
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -34,9 +37,27 @@ services:
   - type: web
     name: gustavocunha-staging
     env: ruby
+    runtime: image
+    image:
+      url: gmmcal/gmmcal:production
+    autoDeploy: false
+    pullRequestPreviewsEnabled: false
+    plan: free
+    region: frankfurt
+    domains:
+      - staging.gustavocunha.dev
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: gustavocunha-staging
+          property: connectionString
+      - fromGroup: staging
+  - type: web
+    name: gustavocunha-prs
+    env: ruby
     buildCommand: "bundle install; bundle exec rake assets:precompile; bundle exec rake assets:clean; bundle exec rake db:migrate db:seed:all db:cache:clear;"
     startCommand: "bundle exec puma -t 5:5 -p ${PORT:-3000} -e ${RACK_ENV:-production}"
-    autoDeploy: false
+    autoDeploy: true
     pullRequestPreviewsEnabled: true
     plan: free
     region: frankfurt
